the terms of the GNU Free Documentation License, Version 1.3 or any later
version published by the Free Software Foundation; with no Invariant Sections,
no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
in the sources of this package and additionally can be obtained from Internet
<https://www.gnu.org/licenses>.

* [2018-06-13] VTMF: incomplete comparison in "check size of $c$" fixed 
* [2018-06-13] mpz_*: added prefix "tmcg_" to exported library functions
* [2018-06-13] mpz_sqrtm: migrate source to C++ for using Botan interfaces
* [2018-06-13] mpz_sprime: migrate source to C++ for using Botan interfaces
* [2018-06-13] mpz_spowm: migrate source to C++ for using Botan interfaces
* [2018-06-13] mpz_srandom: migrate source to C++ for using Botan interfaces
* [2018-06-01] fell the requirement of libgcrypt version to >= 1.6.0
* [2018-06-01] mpz_shash: emulate SHA3-256, if not available by libgcrypt
* [2018-05-24] mpz_helper: added iostream operator << for gcry_mpi_t
* [2018-05-23] RFC4880: added support for tElG in PrivateKeyBlockParse()
* [2018-05-23] RFC4880: added support for tDSS/DSA in PrivateKeyBlockParse()
* [2018-05-19] aiounicast: added PrintStatistics()
* [2018-05-06] added autoconf feature (--with-botan) for optional Botan support
* [2018-05-03] RFC4880: use secure memory for some of tmcg_openpgp_packet_ctx_t
* [2018-05-03] RFC4880: added TMCG_OpenPGP_PKESK and TMCG_OpenPGP_SKESK
* [2018-05-03] RFC4880: added TMCG_OpenPGP_Message and MessageParse()
* [2018-05-01] RFC4880: added PrivateKeyBlockParse()
* [2018-04-29] RFC4880: added TMCG_OpenPGP_PrivateSubKey, TMCG_OpenPGP_Prvkey
* [2018-04-25] RFC4880: added TMCG_OpenPGP_UserAttribute (with opaque content)
* [2018-04-25] RFC4880: changed CertificationHash() to support user attributes
* [2018-04-24] RFC4880: added limit TMCG_OPENPGP_MAX_ALLOC for memory allocation
* [2018-04-22] RFC4880: added support for Camellia cipher (cf. RFC 5581)